# chromatic_cognition_core

./: .gitignore  CHANGELOG.md  Cargo.toml  PHASE_4_STATUS.md  README.md  agents.md  patch.diff  report.md
.claude/: settings.local.json
benches/: dream_benchmarks.rs
config/: engine.toml
data/: chronicle_ums_constants.json
docs/: ARCHITECTURE.md  QUICKSTART.md
examples/: demo.rs  dream_validation.rs  dream_validation_full.rs  learner_validation.rs  phase_3b_validation.rs  solver_demo.rs  train_color_classifier.rs
src/: config.rs  lib.rs
src/bridge/: mod.rs  modality_map.rs  modality_ums.rs
src/data/: color_dataset.rs  mod.rs  pattern.rs
src/dream/: analysis.rs  bias.rs  diversity.rs  embedding.rs  error.rs  experiment.rs  hnsw_index.rs  hybrid_scoring.rs  memory.rs  mod.rs  prelude.rs  query_cache.rs  retrieval_mode.rs  simple_pool.rs  soft_index.rs
src/dream/tests/: mod.rs
src/learner/: classifier.rs  feedback.rs  mod.rs  training.rs
src/meta/: continuity.rs  mod.rs
src/neural/: gradient.rs  layer.rs  loss.rs  network.rs  optimizer.rs
src/solver/: mod.rs  native.rs
src/spectral/: fft.rs  mod.rs
src/tensor/: chromatic_tensor.rs  gradient.rs  operations.rs
tests/: operations.rs  validation_harness.rs
