[package]
name = "chromatic_cognition_core"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.15", features = ["serde", "rayon"] }
rayon = "1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plotters = { version = "0.3", features = ["bitmap"] }

[dev-dependencies]
serde_json = "1"
